--- a/synthetic_benchmark/workflow/Snakefile
+++ b/synthetic_benchmark/workflow/Snakefile
@@ -9,7 +9,7 @@ paramspace = Paramspace(pd.read_csv('config/params.csv'))
 
 rule all:
     input:
-        expand('results/plots/{params}/{replicate}/', params=paramspace.instance_patterns, replicate=range(config['replicate_count']))
+        expand('results/plots/{params}/', params=paramspace.instance_patterns)
 
 
 rule retrieve_terms:
@@ -34,7 +34,7 @@ rule create_synthetic_study:
     input:
         fname_terms='results/term_database.csv'
     output:
-        fname_rds=f'results/studies/{paramspace.wildcard_pattern}/{{replicate}}/study.rds'
+        fname_rds=f'results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds'
     params:
         params=paramspace.instance,
         on_term_count=config['on_term_count']
@@ -44,20 +44,35 @@ rule create_synthetic_study:
 
 rule compute_enrichments:
     input:
-        fname_study=f'results/studies/{paramspace.wildcard_pattern}/{{replicate}}/study.rds',
+        fname_study=f'results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds',
         fname_terms='results/term_database.csv',
         fname_term_sim='results/term_similarities.csv'
     output:
-        fname=f'results/enrichments/{paramspace.wildcard_pattern}/{{replicate}}/enr.csv'
+        fname=f'results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/enr.csv'
     script:
         'scripts/compute_enrichments.R'
 
 
+rule aggregate_results:
+    input:
+        fname_list_enr=expand(
+            f'results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/enr.csv',
+            replicate=range(config['replicate_count']), allow_missing=True
+        ),
+        fname_list_study=expand(
+            f'results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds',
+            replicate=range(config['replicate_count']), allow_missing=True
+        )
+    output:
+        fname=f'results/enrichments/{paramspace.wildcard_pattern}/all_enr.csv'
+    script:
+        'scripts/aggregate_results.R'
+
+
 rule visualize_results:
     input:
-        fname_enr=f'results/enrichments/{paramspace.wildcard_pattern}/{{replicate}}/enr.csv',
-        fname_study=f'results/studies/{paramspace.wildcard_pattern}/{{replicate}}/study.rds'
+        fname_enr=f'results/enrichments/{paramspace.wildcard_pattern}/all_enr.csv'
     output:
-        outdir=directory(f'results/plots/{paramspace.wildcard_pattern}/{{replicate}}/')
+        outdir=directory(f'results/plots/{paramspace.wildcard_pattern}/')
     script:
         'scripts/visualize_results.R'
