--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,ends_with)
-importFrom(dplyr,extract)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
@@ -25,14 +24,12 @@ importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,theme)
 importFrom(netReg,beta)
-importFrom(netReg,coef)
 importFrom(netReg,cv.edgenet)
 importFrom(netReg,edgenet)
 importFrom(proxy,simil)
 importFrom(rlang,.data)
-importFrom(rlang,intersect)
-importFrom(rlang,length)
-importFrom(rlang,union)
+importFrom(stats,coef)
 importFrom(tidygraph,activate)
 importFrom(tidygraph,as_tbl_graph)
 importFrom(tidygraph,mutate)
+importFrom(tidyr,extract)
