--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,4 +41,9 @@ Imports:
     tidygraph,
     netReg,
     igraph,
-    proxy
+    proxy,
+    dplyr,
+    ggplot2,
+    ggraph,
+    tidyr,
+    rlang
