Execute each method in its own job

--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -4,7 +4,12 @@ from snakemake.utils import Paramspace
 
 
 configfile: 'config/config.yaml'
+
+
 paramspace = Paramspace(pd.read_csv('config/params.csv'), filename_params='*')
+
+(method_list,) = glob_wildcards('resources/method_definitions/{method}.R')
+print(method_list)
 
 
 rule all:
@@ -51,36 +56,42 @@ rule create_synthetic_study:
         'scripts/create_synthetic_study.R'
 
 
-rule compute_enrichments:
+rule run_method:
     input:
+        script='resources/method_definitions/{method}.R',
         fname_study=f'results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds',
         fname_terms='results/term_database.csv',
         fname_term_sim=(
             f'results/terms/{paramspace.wildcard_pattern}/term_similarities.csv'
         ),
     output:
-        fname=f'results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/enr.csv',
+        fname=f'results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/{{method}}/enrichment_result.csv',
     params:
         params=paramspace.instance,
+        script_name=lambda wildcards, input: '../' + input.script,
+        setup_code_fname='workflow/scripts/model_setup_code.R',
     resources:
-        mem_mb=15_000,
-        time_min=lambda wildcards, attempt: 60 * 4 * attempt,
+        mem_mb=lambda wildcards: (15_000 if 'cv' in wildcards.method else 5000),
+        time_min=lambda wildcards, attempt: (
+            60 * 4 if 'cv' in wildcards.method else 60
+        ) * attempt,
     script:
-        'scripts/compute_enrichments.R'
+        '{params.script_name}'
 
 
 rule aggregate_results:
     input:
         fname_list_enr=expand(
-            f'results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/enr.csv',
+            f'results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/{{method}}/enrichment_result.csv',
             replicate=range(config['replicate_count']),
+            method=method_list,
             allow_missing=True,
         ),
-        fname_list_study=expand(
-            f'results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds',
-            replicate=range(config['replicate_count']),
-            allow_missing=True,
-        ),
+        fname_list_study=[
+            f'results/studies/{paramspace.wildcard_pattern}/replicates/{replicate}/study.rds'
+            for replicate in range(config['replicate_count'])
+            for _ in method_list
+        ],
     output:
         fname=f'results/enrichments/{paramspace.wildcard_pattern}/all_enr.csv',
     script:
