Fix crash when ploting empty enrichment network

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,theme)
+importFrom(magrittr,"%<>%")
+importFrom(magrittr,extract2)
 importFrom(netReg,beta)
 importFrom(netReg,cv.edgenet)
 importFrom(netReg,edgenet)
