--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(as.data.frame,pareg)
 S3method(plot,pareg)
+export("%>%")
 export(compute_term_similarities)
 export(create_model_df)
 export(pareg)
@@ -22,6 +23,7 @@ importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,theme)
 importFrom(magrittr,"%<>%")
+importFrom(magrittr,"%>%")
 importFrom(magrittr,extract2)
 importFrom(netReg,beta)
 importFrom(netReg,cv.edgenet)
