Improve error message on covariate/term-network mismatch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_fixed)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,theme)
+importFrom(glue,glue_collapse)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,extract2)
 importFrom(netReg,beta)
