--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,9 @@ Suggests:
     formatR,
     devtools,
     plotROC,
-    PRROC
+    PRROC,
+    mgsa,
+    topGO
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
 Imports:
