--- a/inst/scripts/config/config.yaml
+++ b/inst/scripts/config/config.yaml
@@ -5,8 +5,8 @@ term_filter:
     max_size: null
     sample_num: null
 
-on_term_count: 5
 replicate_count: 100
 
 parameters:
     similarityfactor: [0, 0.25, 0.5, 0.75, 1]
+    ontermcount: [1, 5, 10, 50, 100]
