--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ S3method(as.data.frame,pareg)
 S3method(plot,pareg)
 export(compute_term_similarities)
 export(create_model_df)
+export(generate_similarity_matrix)
 export(pareg)
+export(similarity_sample)
 import(ggraph)
+import(progress)
 import(tidyverse)
+importFrom(Matrix,bdiag)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
