--- a/inst/scripts/config/config.yaml
+++ b/inst/scripts/config/config.yaml
@@ -15,3 +15,5 @@ parameters:
     similarityfactor: [0, 0.25, 0.5, 0.75, 1]
     ontermcount: [1, 5, 10, 50, 100]
     siggenescaling: ["membercount", 0.1, 0.001]
+
+params_path: config/params.csv
