--- a/inst/scripts/workflow/Snakefile
+++ b/inst/scripts/workflow/Snakefile
@@ -9,7 +9,7 @@ configfile: "config/config.yaml"
 
 # method selection
 if config["method_list"] is None:
-    (method_list,) = glob_wildcards("resources/method_definitions/{method}.R")
+    (method_list,) = glob_wildcards(srcdir("../resources/method_definitions/{method}.R"))
 else:
     method_list = config["method_list"]
 
@@ -17,7 +17,7 @@ print(method_list)
 
 
 # setup paramspace
-df_params = pd.read_csv("config/params.csv")
+df_params = pd.read_csv(config["params_path"], comment='#')
 
 for param, values in config["parameters"].items():
     df_tmp = pd.DataFrame({param: values, "tmp_col": 1})
@@ -76,7 +76,7 @@ rule create_synthetic_study:
 
 rule run_method:
     input:
-        script="resources/method_definitions/{method}.R",
+        script=srcdir("../resources/method_definitions/{method}.R"),
         fname_study=f"results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds",
         fname_terms="results/terms/{termsource}/term_database.csv",
         fname_term_sim="results/terms/{termsource}/term_similarities.csv",
@@ -84,8 +84,8 @@ rule run_method:
         fname=f"results/enrichments/{paramspace.wildcard_pattern}/replicates/{{replicate}}/{{method}}/enrichment_result.csv",
     params:
         params=paramspace.instance,
-        script_name=lambda wildcards, input: "../" + input.script,
-        setup_code_fname="workflow/scripts/model_setup_code.R",
+        script_name=lambda wildcards, input: input.script,
+        setup_code_fname=srcdir("scripts/model_setup_code.R"),
     resources:
         mem_mb=lambda wildcards: (15_000 if "cv" in wildcards.method else 5000),
         time_min=lambda wildcards, attempt: (
