--- a/inst/scripts/resources/multi_config_workflow/config_network_regularization/config.yaml
+++ b/inst/scripts/resources/multi_config_workflow/config_network_regularization/config.yaml
@@ -3,6 +3,7 @@
 # `null` will execut all methods
 # list of strings will execute selected methods
 method_list:
+    - pareg
     - pareg_network
 
 term_filter:
