Plot p-value histograms during study generation

--- a/inst/scripts/workflow/Snakefile
+++ b/inst/scripts/workflow/Snakefile
@@ -68,6 +68,7 @@ rule create_synthetic_study:
         fname_sim="results/terms/{termsource}/term_similarities.csv",
     output:
         fname_rds=f"results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/study.rds",
+        plotdir=directory(f"results/studies/{paramspace.wildcard_pattern}/replicates/{{replicate}}/plots/"),
     params:
         params=paramspace.instance,
     resources:
