Make workflow compatible with DAG renderer

--- a/inst/scripts/workflow/Snakefile
+++ b/inst/scripts/workflow/Snakefile
@@ -1,3 +1,4 @@
+import sys
 import pandas as pd
 
 from snakemake.utils import Paramspace
@@ -15,7 +16,7 @@ if config["method_list"] is None:
 else:
     method_list = config["method_list"]
 
-print(method_list)
+print(method_list, file=sys.stderr)
 
 
 # setup paramspace
