--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(create_model_df)
 export(generate_similarity_matrix)
 export(pareg)
 export(similarity_sample)
+export(transform_y)
 import(ggraph)
 import(progress)
 import(tidyverse)
